# PCQA

./: DockerFile  main.py  pyproject.toml
.github/: copilot-instructions.md
src/: n-jet_fitting.py  pcqa_demo.py  quality2color.py
src/data/: bunny_quality_score_ours.txt
src/models/: DeepFit.py
src/utils/: normal_estimation_utils.py
