[project]
name = "pcqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdist>=2.1.0",
    "ipython-genutils==0.1.0",
    "ipyvolume>=0.6.3",
    "jupyter>=1.1.1",
    "libigl>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "open3d>=0.19.0",
    "pygeodesic>=0.1.11",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "urllib3>=2.6.2",
    "vtk>=9.5.2",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.0.0",
  "torchvision>=0.15.0,<0.24.0",
]
cu118 = [
  "torch>=2.7.1",
  "torchvision>=0.22.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu118", extra = "cu118" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu118", extra = "cu118" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true